--- a/第一章/课后习题部分答案.md
+++ b/第一章/课后习题部分答案.md
@@ -1,1 +1,42 @@
 ### 试写一算法，从大至小依次输出顺序读入的 3 个整数 x、y 和 z
+
+```c
+#include <stdio.h>
+
+// 比较函数，为什么这里使用指针类型？请同学们思考。
+int compare(int *x, int *y, int *z)
+{
+    // 声明中间变量
+    int temp;
+    if (*x < *y)
+    {
+        temp = *x;
+        *x = *y;
+        *y = temp;
+    }
+    if (*x < *z)
+    {
+        temp = *x;
+        *x = *z;
+        *z = temp;
+    }
+    if (*y < *z)
+    {
+        temp = *y;
+        *y = *z;
+        *z = temp;
+    }
+}
+
+int main()
+{
+    // 声明三个整型变量
+    int x, y, z;
+    // 通过键盘输入数据
+    scanf("%d %d %d", &x, &y, &z);
+    // 调用函数 compare 比较大小
+    compare(&x, &y, &z);
+    printf("%d %d %d", x, y, z);
+    return 0;
+}
+```
