--- a/第一章/课后习题部分答案.md
+++ b/第一章/课后习题部分答案.md
@@ -40,3 +40,8 @@ int main()
     return 0;
 }
 ```
+
+### 设某班级有 n 个学生，要求设计以下算法：
+1. 输入全班学生的学号和某一门课程的考试成绩；
+2. 将该课程的成绩按由高到低的顺序排序；
+3. 求出平均成绩和不及格学生的人数。最后设计 main() 调用以上算法按从高到低的次序输出学生的学号和相应的成绩，输出平均成绩和不及格学生人数。
