--- a/第一章/课后习题部分源码.md
+++ b/第一章/课后习题部分源码.md
@@ -45,3 +45,45 @@ int main()
 1. 输入全班学生的学号和某一门课程的考试成绩；
 2. 将该课程的成绩按由高到低的顺序排序；
 3. 求出平均成绩和不及格学生的人数。最后设计 main() 调用以上算法按从高到低的次序输出学生的学号和相应的成绩，输出平均成绩和不及格学生人数。
+
+### 试分析以下程序中 Sum1，Sum2，fact 三个函数的时间复杂度，并以大 O 表示法进行表达
+
+```c
+#include <stdio.h>
+Sum1(int n)
+{
+    int p = 1, sum = 0, m;
+    for (m = 1; m <= n; m++)
+    {
+        p *= m;
+        sum += p;
+    }
+    return (sum);
+}
+Sum2(int n)
+{
+    int sum = 0, p, m, t;
+    for (m = 1; m <= n; m++)
+    {
+        p = 1;
+        for (t = 1; t <= m; t++)
+            p *= t;
+        sum += p;
+    }
+    return (sum);
+}
+fact(int n)
+{
+    if (n <= 1)
+        return (1);
+    else
+        return (n * fact(n - 1));
+}
+int main()
+{
+    printf("%d\n", Sum1(5));
+    printf("%d\n", Sum2(5));
+    printf("%d\n", fact(5));
+    return 0;
+}
+```
