--- a/第三章/队列讲义.md
+++ b/第三章/队列讲义.md
@@ -172,21 +172,87 @@ int main() {
 
 2. **作业布置**：要求学生编写一个简单的队列实现（可以使用数组或链表作为底层数据结构），并包括入队、出队、查看队首和检查队列是否为空的操作。鼓励他们在完成后进行测试以确保队列的正确性。
 
-## 第二节课：队列的顺序存储实现**
+## 第二节课：队列的顺序存储实现
 
-1. 介绍如何使用数组来实现队列的顺序存储结构。
+1. 介绍如何使用数组来实现队列的顺序存储结构。（板书）
 2. 演示入队、出队等操作的具体实现代码，并解释其中的逻辑。
+
+```c
+#include <stdio.h>  
+#include <stdbool.h>  
+  
+#define QUEUE_SIZE 100  
+  
+int queue[QUEUE_SIZE];  
+int front = 0;  // 队头索引  
+int rear = -1;  // 队尾索引  
+  
+// 检查队列是否为空  
+bool isQueueEmpty() {  
+    return front > rear;  
+}  
+  
+// 检查队列是否已满  
+bool isQueueFull() {  
+    return rear == QUEUE_SIZE - 1;  
+}  
+  
+// 入队操作  
+void enqueue(int data) {  
+    if (isQueueFull()) {  
+        printf("Queue is full. Cannot enqueue.\n");  
+        return;  
+    }  
+    if (rear == -1) {  
+        front = 0;  
+        rear = 0;  
+    } else {  
+        rear++;  
+    }  
+    queue[rear] = data;  
+    printf("Enqueued: %d\n", data);  
+}  
+  
+// 出队操作  
+void dequeue() {  
+    if (isQueueEmpty()) {  
+        printf("Queue is empty. Cannot dequeue.\n");  
+        return;  
+    }  
+    printf("Dequeued: %d\n", queue[front]);  
+    if (front == rear) {  
+        front = -1;  
+        rear = -1;  
+    } else {  
+        front++;  
+    }  
+}  
+  
+int main() {  
+    enqueue(10);  
+    enqueue(20);  
+    enqueue(30);  
+    dequeue();  
+    dequeue();  
+    enqueue(40);  
+    dequeue();  
+    dequeue();  
+    dequeue(); 
+    return 0;  
+}
+```
+
 3. 讨论顺序存储队列可能遇到的问题，如数组空间不足时的处理策略（如循环队列）。
 4. 通过编程小练习，让学生实践队列的顺序存储实现。
 
-## 第三节课：队列的链式存储实现**
+## 第三节课：队列的链式存储实现
 
 1. 引入链式存储结构的概念，解释其相较于顺序存储的优势和劣势。
 2. 演示如何使用链表来实现队列，包括单链表和双链表两种实现方式。
 3. 详细讲解链式队列的入队、出队等操作的实现过程。
 4. 通过对比顺序存储和链式存储的队列，帮助学生理解不同存储结构对队列性能的影响。
 
-## 第四节课：队列的应用与扩展**
+## 第四节课：队列的应用与扩展
 
 1. 介绍队列在算法设计中的应用，如广度优先搜索（BFS）、缓冲区处理等。
 2. 通过具体算法示例（如层次遍历二叉树），演示队列在实际问题中的应用。
