--- a/第三章/队列讲义.md
+++ b/第三章/队列讲义.md
@@ -181,7 +181,7 @@ int main() {
 #include <stdio.h>  
 #include <stdbool.h>  
   
-#define QUEUE_SIZE 100  
+#define QUEUE_SIZE 5  
   
 int queue[QUEUE_SIZE];  
 int front = 0;  // 队头索引  
@@ -203,14 +203,9 @@ void enqueue(int data) {
         printf("Queue is full. Cannot enqueue.\n");  
         return;  
     }  
-    if (rear == -1) {  
-        front = 0;  
-        rear = 0;  
-    } else {  
-        rear++;  
-    }  
+    rear++;    
     queue[rear] = data;  
-    printf("Enqueued: %d\n", data);  
+    printf("%d Enqueue!\n", data);  
 }  
   
 // 出队操作  
@@ -218,26 +213,36 @@ void dequeue() {
     if (isQueueEmpty()) {  
         printf("Queue is empty. Cannot dequeue.\n");  
         return;  
-    }  
-    printf("Dequeued: %d\n", queue[front]);  
-    if (front == rear) {  
-        front = -1;  
-        rear = -1;  
-    } else {  
-        front++;  
-    }  
+    }
+    printf("%d Dequeue!\n", queue[front]);
+    queue[front] = -1;  
+    front++;    
 }  
+// 遍历队列
+void printQueue(){
+    int i;
+    for(i = 0; i < QUEUE_SIZE; i++){
+        if(i==QUEUE_SIZE-1){
+            printf("%d\n", queue[i]);
+        }
+        printf("%d ", queue[i]);
+    }
+}
   
 int main() {  
     enqueue(10);  
     enqueue(20);  
-    enqueue(30);  
-    dequeue();  
-    dequeue();  
+    enqueue(30);
     enqueue(40);  
-    dequeue();  
-    dequeue();  
-    dequeue(); 
+    enqueue(50); 
+    enqueue(60);//表满，无法入队
+    printQueue();
+    dequeue();
+    dequeue();
+    dequeue();
+    dequeue();
+    dequeue();
+    dequeue();//队空，无法出队
     return 0;  
 }
 ```
