--- a/第三章/队列讲义.md
+++ b/第三章/队列讲义.md
@@ -178,72 +178,55 @@ int main() {
 2. 演示入队、出队等操作的具体实现代码，并解释其中的逻辑。
 
 ```c
-#include <stdio.h>  
-#include <stdbool.h>  
-  
-#define QUEUE_SIZE 5  
-  
-int queue[QUEUE_SIZE];  
-int front = 0;  // 队头索引  
-int rear = -1;  // 队尾索引  
-  
-// 检查队列是否为空  
-bool isQueueEmpty() {  
-    return front > rear;  
-}  
-  
-// 检查队列是否已满  
-bool isQueueFull() {  
-    return rear == QUEUE_SIZE - 1;  
-}  
-  
-// 入队操作  
-void enqueue(int data) {  
-    if (isQueueFull()) {  
-        printf("Queue is full. Cannot enqueue.\n");  
-        return;  
-    }  
-    rear++;    
-    queue[rear] = data;  
-    printf("%d Enqueue!\n", data);  
-}  
-  
-// 出队操作  
-void dequeue() {  
-    if (isQueueEmpty()) {  
-        printf("Queue is empty. Cannot dequeue.\n");  
-        return;  
-    }
-    printf("%d Dequeue!\n", queue[front]);
-    queue[front] = -1;  
-    front++;    
-}  
-// 遍历队列
-void printQueue(){
-    int i;
-    for(i = 0; i < QUEUE_SIZE; i++){
-        if(i==QUEUE_SIZE-1){
-            printf("%d\n", queue[i]);
-        }
-        printf("%d ", queue[i]);
-    }
+#include <stdio.h>
+#include <stdbool.h>
+
+#define MaxSize 10
+int q[MaxSize];
+int front;
+int rear;
+
+//空队列返回true,否则返回false
+bool empty() {
+    return front == rear;
 }
-  
-int main() {  
-    enqueue(10);  
-    enqueue(20);  
-    enqueue(30);
-    enqueue(40);  
-    enqueue(50); 
-    enqueue(60);//表满，无法入队
-    printQueue();
-    dequeue();
-    dequeue();
-    dequeue();
-    dequeue();
-    dequeue();
-    dequeue();//队空，无法出队
-    return 0;  
+//队列满返回true,否则返回false
+bool full() {
+    return rear + 1 == MaxSize;
+}
+//入队列
+void push(int x) {
+    ++rear;
+    q[rear] = x;
+}
+//取队首元素
+int getFront() {
+    return q[front+1];
+}
+//出队列
+void pop() {
+    ++front;
+}
+
+int main(int argc, char const *argv[])
+{
+    int i;
+    front = rear = -1;    //初始化队列
+
+    while (scanf("%d", &i) != EOF) {
+        if (i == -1)break;
+        if (!full())    //队列未满时
+            push(i);    //入队列
+        else
+            printf("queue is full!\n");
+    }
+    while (!empty()) {    //输出队列元素
+        printf("%d ", getFront());
+        pop();
+    }
+    printf("\n");
+
+    return 0;
 }
 ```
 
